--- a/assets/src/css/@globals/global.css
+++ b/assets/src/css/@globals/global.css
@@ -2,6 +2,12 @@
 Content Wrapper
 */
 
+*,
+*::before,
+*::after {
+  outline: none !important;
+}
+
 html {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
